# FasdQuery

./: CMakeLists.txt  CategoryFilter.cpp  CategoryFilter.h  FileEntry.h  FileScanner.cpp  FileScanner.h  FileTableModel.cpp  FileTableModel.h  MainWindow.cpp  MainWindow.h  README.md  icons.qrc  main.cpp
